--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -37,7 +37,7 @@
     font-size: 14px;
     text-align: center;
 }
-.table--text tbody td{
+.table--text,.table-text-md tbody td{
     vertical-align: middle;
 }
 
@@ -69,6 +69,18 @@
 }
 /*CUSTOM SCROLL BAR END*/
 
+/*Placeholder*/
+.sm-placeholder::placeholder{
+    font-size: 12px;
+    color: black;
+    font-weight: 500;
+}
+.md-placeholder::placeholder{
+    font-size: 14px;
+    color: black;
+    font-weight: 400;
+}
+/*Placeholder Ends*/
 
 /*Backgrounds*/
 .bg-light-grey{
