--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -74,7 +74,7 @@
 }
 /*CUSTOM SCROLL BAR END*/
 
-/*Placeholder*/
+/*Placeholder & Focused Links*/
 .sm-placeholder::placeholder{
     font-size: 12px;
     color: black;
@@ -85,8 +85,17 @@
     color: black;
     font-weight: 400;
 }
+.list-group-item a:focus{
+    color: #f64e60 !important;
+}
 /*Placeholder Ends*/
 
+/*Borders*/
+.list-group-item{
+    border: none;
+    border-bottom: 5px solid #ebeef6;
+}
+/*Borders End*/
 /*Backgrounds*/
 .bg-light-grey{
     background-color: #dbdbdbdc;
